# ift_6390_machine_learning

./: .gitignore  README.md  pyproject.toml
assignments/: project_energie.md  project_energie_analysis.ipynb  projet_energie.ipynb  projet_energie_00.ipynb  submission.csv
assignments/assignment_1/: projet_energie.ipynb  submission.csv
assignments/assignment_2/: analysis.ipynb  devoir2_starter.ipynb  experiments.ipynb  report_notes.md
assignments/assignment_2/models/: exp_1_1__2026_03_26__00_54_07.pt  exp_1_1__2026_03_26__00_57_43.pt
assignments/assignment_2/src/: data_management.py  data_prep.py  models.py  part_1.py  part_2.py  playground.ipynb  training.py  utils.py
demos/: 2026_01_26_ellipse_singular_vectors.ipynb  2026_01_26_homoscedastic.ipynb  2026_01_30_classificateur_lineaire_descente_gradient.ipynb  2026_01_30_superconductors.ipynb  2026_02_23_moe.ipynb  2026_04_12_ensemble_methods.ipynb
exercises/00_knn/: examples.ipynb
exercises/00_non_parametric_methods/: examples.ipynb
exercises/01_learning_problem/: examples.ipynb
notebooks/: 00_setup_test.ipynb
playgrounds/: basics.ipynb
practical_exercises/: tp0_knn.ipynb  tp1_learning_problem.ipynb  tp3_probabilistic_models.ipynb  tp7_traceur.ipynb
provided_exercises/: README.md  tp0_knn.ipynb
src/ift6390/: __init__.py  setup.py
