[project]
name = "ift-6390-machine-learning"
version = "0.1.0"
description = "IFT 6390 Machine Learning Course Materials"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core ML stack
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",

    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",

    # Jupyter
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",

    # Utilities
    "tqdm>=4.65.0",

    # Data
    "ucimlrepo>=0.0.3",
]

[project.optional-dependencies]
deep = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ift6390"]

[tool.pyright]
typeCheckingMode = "basic"
reportArgumentType = false
